# novellama

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.js  Dockerfile  LICENSE  README.md  config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  run_app.sh  setup.sh  tailwind.config.js  vitest.config.ts
.github/workflows/: docker-build.yaml
app/: error.tsx  loading.tsx  not-found.tsx
backend/: .env.example  pyproject.toml
backend/novellama/: app.py  storage.py
backend/novellama/api/: translation_api.py
backend/novellama/models/: translation_context.py
backend/novellama/utils/: tokenizer.py
frontend/: package-lock.json
frontend/src/: App.js
pages/: _app.tsx  index.tsx  new.tsx
pages/api/: config.ts  novels.ts  quality-check.ts  scrape.ts  translate-stream.ts  translate.ts
pages/translate/: [id].tsx
scripts/: fix-chapter-counts.sql  migrate-novels.ts  migrate-to-sqlite.ts  tsconfig.json
src/: types.ts
src/components/: ChapterNavigation.tsx  ChunkNavigation.tsx  LiveTokenCounter.tsx  NovelList.tsx  NovelSettings.tsx  QualityIndicator.tsx  ReferenceInput.tsx  ReferenceItem.tsx  TokenUsage.tsx  TokenUsageDisplay.tsx  TranslatePage.tsx  TranslationEditor.tsx
src/hooks/: useConfig.ts  useLocalStorage.ts  useTokenizer.ts
src/services/: api.ts  backgroundWorker.ts  storage.ts
src/styles/: globals.css  nprogress.css
src/types/: index.ts
src/utils/: chapterCache.ts  chapterStorage.ts  db.ts  extractToolcalls.test.ts  extractToolcalls.ts  fileStorage.ts  postProcessTranslation.test.ts  tokenizer.ts  (+4 more)
(+27 files in other folders)
